[package]
name = "tokio-postgres-example"
version = "0.1.0"
authors = ["john <me@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false, features = ["postgres_pool"] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", branch = "std-futures" }
futures-preview = "0.3.0-alpha.18"
tokio = "0.2.0-alpha.4"